SSM-3288: fixed by updating the CSRF dialog to use a TextEntryPanel for input. This allows for input to be validated. Without this the users input would be lost if invalid or a display input dialog loop would have been required. Removed resources folder out of non resource hierarchy. Updated TextEntryPanel with @Override annotations.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28495 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/resources/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.properties
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/resources/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.properties
@@ -11,3 +11,6 @@ allowedHttpMethods=Allowed HTTP Methods
 add=Add
 edit=Edit
 remove=Remove
+domainValue=Domain Value:
+invalidDomain=Invalid Domain
+enterDomainTitle=Enter Domain
