SSG-5191: Fix for WS-Security processing vulnerable to XML Bomb (Entity expansion attack)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29855 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1401,6 +1401,18 @@ security.xml.dsig.permittedDigestAlgorithms.default = MD5,SHA,SHA-1,SHA-256,SHA-
 security.xml.dsig.permittedDigestAlgorithms.clusterProperty = security.xml.dsig.permittedDigestAlgorithms
 security.xml.dsig.permittedDigestAlgorithms.systemProperty = com.l7tech.security.xml.dsig.permittedDigestAlgorithms
 
+security.xml.dsig.permittedTransformAlgorithms.description = List of transform algorithm URIs that will be permitted when verifying XML digital signatures. Transforms that require algorithms not on this list will fail (Comma delimited)
+security.xml.dsig.permittedTransformAlgorithms.clusterProperty = security.xml.dsig.permittedTransformAlgorithms
+security.xml.dsig.permittedTransformAlgorithms.systemProperty = com.l7tech.security.xml.dsig.permittedTransformAlgorithms
+security.xml.dsig.permittedTransformAlgorithms..visible = false
+security.xml.dsig.permittedTransformAlgorithms.default = \
+  http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#STR-Transform,\
+  http://docs.oasis-open.org/wss/2004/XX/oasis-2004XX-wss-swa-profile-1.0#Attachment-Complete-Transform,\
+  http://docs.oasis-open.org/wss/2004/XX/oasis-2004XX-wss-swa-profile-1.0#Attachment-Content-Only-Transform,\
+  http://www.w3.org/2000/09/xmldsig#enveloped-signature,\
+  http://www.w3.org/2001/10/xml-exc-c14n#,\
+  http://www.w3.org/2001/10/xml-exc-c14n#WithComments
+
 security.xml.dsig.idAttributeNames.description = Attribute names that will be recognized as ID attributes for purposes of locating Signature Reference URI targets during WS-Security processing.  The special prefix "local" matches the namespace URI against the owning element rather than the attribute.
 security.xml.dsig.idAttributeNames.default = {http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd}Id\n\
  {http://schemas.xmlsoap.org/ws/2002/07/utility}Id\n\
